--- a/src/components/HeroScene.astro
+++ b/src/components/HeroScene.astro
@@ -8,7 +8,7 @@
     <slot />
   </div>
   <noscript>
-    <div class="absolute inset-0 bg-gradient-to-b from-skyline-dark via-skyline-purple to-skyline-orange">
+    <div class="absolute inset-0 bg-gradient-to-b from-nightwalk-dark via-nightwalk-purple to-nightwalk-orange">
       <div class="hero-content">
         <slot />
       </div>
